--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.57.1"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
     "usebootstrap": "^0.1.38"
   }
