--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
-    "usebootstrap": "^0.1.38"
+    "usebootstrap": "^0.1.38",
+    "vue-router": "^4.0.13"
   }
 }
